--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -25,6 +25,7 @@
 		<name>AuraDefinitionBundle</name>
 	</types>
 	<types>
+		<members>Account.Max_Opportunity__c</members>
 		<members>Account.Total_Budget__c</members>
 		<name>CustomField</name>
 	</types>
