--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -30,6 +30,11 @@
 		<name>CustomField</name>
 	</types>
 	<types>
+		<members>Employee__c</members>
+		<members>Tech_Firm__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
 		<members>*</members>
 		<name>LightningComponentBundle</name>
 	</types>
