Prevent Deletion Of pontial Buyer

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -28,6 +28,7 @@
 		<members>Account.Max_Opportunity__c</members>
 		<members>Account.Number_of_Products__c</members>
 		<members>Account.Total_Budget__c</members>
+		<members>Contact.Potential_Buyer__c</members>
 		<name>CustomField</name>
 	</types>
 	<types>
